--- a/resolution.tex
+++ b/resolution.tex
@@ -32,7 +32,7 @@ An increasing number of Atmospheric General Circulation Models (AGCMs) are being
 
 The sensitivity of the Community Atmosphere Model \citep[CAM;][]{CAM5}, and its predecessor, the Community Climate Model (CCM) to resolution ({\em{resolution}} refers to {\em{horizontal resolution}}, hereafter) is well documented through convergence studies \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}. CAM/CCM is a fully supported, well-funded climate model, but despite thirty years of continual model development, there are robust sensitivities to resolution that have persisted in all versions of the model. This study argues that a unifying cause, the inherent scale sensitivities of the underlying dynamical equations, can explain the robust responses to resolution that occur in CAM/CCM.
 
-In CAM/CCM, the atmosphere progressively dries with increasing resolution, seen through a reduction in simulated total precipitable water \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}, which typically, but not always \citep[see][]{WETAL1995CD,ZetAl2014JCb}, coincides with a reduction in cloud cover. \cite{KW1991JGR} and \cite{WETAL1995CD} suggested that the drying of the atmosphere is due to greater magnitude resolved vertical velocities with increasing resolution, with greater subsiding motion increasing the export of dry air from the upper troposphere. This mechanism is consistent with an analysis of moisture budgets in CAM, version 4 \citep[CAM4;][]{CAM4} across multiple resolutions \citep{YETAL2014JCLIM,HR2017JCLIM}.
+In CAM/CCM, the atmosphere progressively dries with increasing resolution, seen through a reduction in simulated total precipitable water \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}, which typically, but not always \citep[see][]{WETAL1995CD,ZetAl2014JCb}, coincides with a reduction in cloud cover. \cite{KW1991JGR} and \cite{WETAL1995CD} suggested that the drying of the atmosphere is due to greater magnitude resolved vertical velocities with increasing resolution, with greater subsiding motion increasing the export of dry air from the upper troposphere. This mechanism is consistent with an analysis of moisture budgets in CAM, version 4 \citep[CAM4;][]{CAM4} across multiple resolutions \citep{HR2017JCLIM}.
 
 It is well known that the magnitude of vertical velocities increase with resolution in atmospheric models. While the cause of this sensitivity has been established for large-eddy simulations \citep[see][and references therein]{J2017JAMES}, only recently has the vertical velocity field in AGCMs and their sensitivity to resolution received attention \citep{DETALA2016ACP,OETAL2016JAMES}, albeit with seemingly conflicting explanations \citep{RETAL2016CD,HR2018JAMES}. To generalize the relationship between vertical velocity and resolution, let $\alpha$ refer to the ratio of $W_0$, the vertical velocity scale of some reference grid spacing $\Delta x_0$, to $W$, the vertical velocity scale for any $\Delta x$. A power law for $\alpha^{-1}$ in $\Delta x$ is then,
 \begin{equation}
@@ -42,7 +42,7 @@ where $n$ is the power law exponent.
 
 \cite{RETAL2016CD} derive an estimate $n= h-1$ in equation~\ref{eq:alpha} by combining a scale analysis of the continuity equation with a power law representation $\Delta x^{2h}$ of the second-order structure function of the horizontal wind. Strictly speaking, $\Delta x$ here refers to the distance between two points for which the velocity increment is computed in the structure function, but with this distance set to the model grid-spacing. Regional models analyzed in \cite{RETAL2016CD} provide evidence for $h<1$, implying $n<0$ and consistent with the increase in $W$ with resolution in models.
 
-Observations show that $h=\frac{1}{3}$ for horizontal scales on the order of $10^2$ km and less \citep[hereafter referred to as the {\em{mesoscale}};][]{L1999JFM,CL2001JGR}. This value for $h$ is also supported by the slope of the kinetic energy spectrum $-\beta$, which can be related to the second-order structure function through the Weiner–Khinchine theorem, $\beta = \left( 2h+1 \right)$, valid in the range $1<\beta<3$ \citep[satisfies stationarity;][]{DETAL1996JAS}. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is true for the kinetic energy spectrum in observations \citep{NG1985JAS,CETAL1999JGR} and models \citep[e.g.,][]{THO2006GRL,SPKS2014JAS} at the mesoscale. \cite{RETAL2016CD} propose that the overwhelming support for $h=\frac{1}{3}$ at the mesoscale provides an emergent constraint for $n=-\frac{2}{3}$ in equation~\ref{eq:alpha}.
+Observations show that $h=\frac{1}{3}$ for horizontal scales on the order of $100$ km and less \citep[hereafter referred to as the {\em{mesoscale}};][]{L1999JFM,CL2001JGR}. This value for $h$ is also supported by the slope of the kinetic energy spectrum $-\beta$, which can be related to the second-order structure function through the Weiner–Khinchine theorem, $\beta = \left( 2h+1 \right)$, valid in the range $1<\beta<3$ \citep[satisfies stationarity;][]{DETAL1996JAS}. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is true for the kinetic energy spectrum in observations \citep{NG1985JAS,CETAL1999JGR} and models \citep[e.g.,][]{THO2006GRL,SPKS2014JAS} at the mesoscale. \cite{RETAL2016CD} propose that the overwhelming support for $h=\frac{1}{3}$ at the mesoscale provides an emergent constraint for $n=-\frac{2}{3}$ in equation~\ref{eq:alpha}.
 
 In large-eddy simulations, the sensitivity of vertical velocities to resolution is adequately explained by a scale analysis of the dynamical equations \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}. For hydrostatic scales relevant to AGCMs, a scale analysis of the Poisson equation gives $W \propto D^{-1}$, where $D$ is the horizontal scale of buoyancy perturbations driving vertical motion \citep{HR2018JAMES}. In CAM aqua-planet simulations, the largest source of buoyancy is from stratifrom cloud formation, which are grid-limited with horizontal scales set by the effective resolution of the model \citep[i.e., some multiple of $\Delta x$;][]{S2011LNCSE}, indicating $n=-1$ in equation~\ref{eq:alpha} \citep{HR2018JAMES}. \cite{HR2017JCLIM} has shown that the $n=-1$ scaling does not explain the behavior of CAM4 in a convergence experiment, but follow-up studies \citep{HR2018JAMES,HETAL2019JAMES} indicate that the inadequacy of the $n=-1$ scaling is not definitive, due to large time-truncation errors associated with fixing the physics time-step ($\Delta t_{phys}$) across resolutions in that study.
 
@@ -56,7 +56,7 @@ Another robust response of the CAM/CCM lineage to resolution is an increase in s
 \label{fig:cam-history}
 \end{figure}
 
-In this study, a convergence experiment using CAM, version 6 (CAM6; \url{https://ncar.github.io/CAM/doc/build/html/users_guide/index.html}) is carried out and analyzed in detail. It is shown that the resolution sensitivity of vertical velocities are well described with $n=-1$ in equation~\eqref{eq:alpha}, provided $\Delta t_{phys}$ is defined in a way that avoids large truncation errors across resolutions. The reduction in convective precipitation rates with resolution in CAM6 is shown to result from the greater magnitude subsiding motion, creating a more stable atmosphere in which the criterion for parameterized convection occurs less often. The increase in stratiform precipitation rates with resolution is shown to result more directly from the increase in vertical velocities, by increasing moisture fluxes through cloud base. The feedback of the resolved vertical motion on the physics indicates that the root cause of resolution sensitivity in CAM arises from the sensitivity of resolved dynamical modes to native grid resolution. Section 2 describes CAM6 and the details of the convergence experiment. Section 3 contains a thorough analysis of the CAM6 simulations and Section 4 provides some discussion and conclusions.
+In this study, a convergence experiment using CAM, version 6 (CAM6; \url{https://ncar.github.io/CAM/doc/build/html/users_guide/index.html}) is carried out and analyzed in detail. It is shown that the resolution sensitivity of vertical velocities are well described with $n=-1$ in equation~\eqref{eq:alpha}, provided $\Delta t_{phys}$ is defined in a way that avoids large truncation errors across resolutions. The increase in stratiform precipitation rates with resolution are attributed to an increase in resolved moisture fluxes at cloud base, primarily due to the increase in upward vertical velocities with resolution. The corresponding increase in downward vertical velocities with resolution are shown to stabilize the mean state, reducing the activity of the convection scheme and associated precipitation rates with increasing resolution. The feedback of the resolved vertical motion on the physics indicates that the root cause of resolution sensitivity in CAM arises from the sensitivity of resolved dynamical modes to native grid resolution. Section 2 describes CAM6 and the details of the convergence experiment. Section 3 contains a thorough analysis of the CAM6 simulations and Section 4 provides some discussion and conclusions.
  
  \begin{table*}
  \caption{Experimental design and global mean climatologies. $\Delta x$ refers to the average equatorial grid-spacing.}
@@ -271,7 +271,7 @@ It is the lack of spread in dilute CAPE between ascending/descending regions tha
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_trans.pdf}\\
 \end{center}
-\caption{(a,b) Two snapshots of $\omega$ for a longitude-pressure transect at $\sim 18^{\circ}$ latitude in the $ne30$ simulation, overlain by the $0.0075$ kg/m$^2$/s contour of the ZM mass flux (white) delineating the region where the ZM scheme is active, and the 15 K/day contour of the total physics tendencies (black), indicating stratiform cloud formation.}
+\caption{(a,b) Two snapshots of $\omega$ for a longitude-pressure transect at $\sim 18^{\circ}$ latitude in the $ne30$ simulation, overlain by the $0.0075$ kg/m$^2$/s contour of the ZM mass flux delineating the region where the ZM scheme is active.}
 \label{fig:transect}
 \end{figure}
 
@@ -289,7 +289,7 @@ In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposi
 
 \section{Conclusions}
 
-Establishing a complete understanding of resolution sensitivity in atmospheric general circulation models (AGCMs) is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of physical parameterizations compatible with the highly flexible grid structures now being used to maximize efficiency on modern day supercomputers. This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since its inception (see Figure~\ref{fig:cam-history}). As with most versions of CAM, in CAM6 the atmosphere becomes drier and less cloudy with increasing resolution, and parameterized convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness with resolution is a result of increases in the magnitude of vertical velocities with resolution, which more efficiently advect dry air aloft, downward \citep{KW1991JGR,WETAL1995CD,YETAL2014JCLIM,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why convective precipitation decreases at the expense of stratiform precipitation with increasing resolution.
+Establishing a complete understanding of resolution sensitivity in atmospheric general circulation models (AGCMs) is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of physical parameterizations compatible with the highly flexible grid structures now being used to maximize efficiency on modern day supercomputers. This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since its inception (see Figure~\ref{fig:cam-history}). As with most versions of CAM, in CAM6 the atmosphere becomes drier and less cloudy with increasing resolution, and parameterized convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness with resolution is a result of increases in the magnitude of vertical velocities with resolution, which more efficiently advect dry air aloft, downward \citep{KW1991JGR,WETAL1995CD,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why convective precipitation decreases at the expense of stratiform precipitation with increasing resolution.
 
 The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The $n=-1$ exponent is derived from a scale analysis of the Poisson equation, which shows pressure gradients scale like the inverse of the horizontal scale of buoyancy perturbations, $D^{-1}$, driving convergence into the air column and the vertical velocities also scale like $D^{-1}$. It has been previously shown that $D$ is set by stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, the effective resolution \citep{S2011LNCSE}, and so $D \propto \Delta x$ and $n=-1$. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
 
