--- a/resolution.tex
+++ b/resolution.tex
@@ -251,7 +251,7 @@ The large spread in dilute CAPE between ascending/descending regions is crucial 
 
 The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) in the $ne20$ run, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in the $ne120$ run. The increasing occurrence of stable, subsiding grid columns accounts for about half of the changes in dilute CAPE in the deep tropics with resolution, the other half being due to the systematic reduction in dilute CAPE for both ascending and descending regions (Figure~\ref{fig:cape}a). This breakdown is straightforward to compute since the sum of the products of the space-time fractions with their associated ascending/descending dilute CAPE values approximate the dilute CAPE computed from the mean temperature/moisture profiles over the entire deep tropics quite well (compare black and grey crosses in Figure~\ref{fig:cape}a). 
 
-To isolate the relative importance of temperature or moisture on the systematic reduction in dilute CAPE with resolution for both ascending/descending regimes, dilute CAPE is recomputed for all resolutions, but through fixing the moisture profiles to the lowest resolution $ne20$ profile, and then through fixing only the temperature to the $ne20$ profile. Figure~\ref{fig:cape}d shows the influence of changing temperature profile with resolution on dilute CAPE of ascending/descending grid columns, and illustrates that the systematic reduction in dilute CAPE with resolution in both regimes is primarily from changes to the temperature field. Moisture changes with resolution has a smaller influence, only appreciably impacting the dilute CAPE of ascending regions at higher resolutions (not shown).
+To isolate the relative importance of temperature or moisture on the systematic reduction in dilute CAPE with resolution for both ascending/descending regimes, dilute CAPE is recomputed for all resolutions, but through fixing the moisture profiles to the lowest resolution $ne20$ profile, and then through fixing only the temperature to the $ne20$ profile. Figure~\ref{fig:cape}d shows the influence of changing temperature profile with resolution on dilute CAPE of ascending/descending grid columns, and illustrates that the systematic reduction in dilute CAPE with resolution in both regimes is primarily from changes to the temperature field. Moisture changes with resolution do not contribute to the reduction in dilute CAPE with resolution, with the exception that the 20 J/kg reduction in dilute CAPE of ascending regions between the $ne80$ and $ne120$ runs (Figure~\ref{fig:cape}a) is entirely due to changes in moisture (not shown).
 
 \subsubsection{Subtropics}
 
@@ -315,7 +315,7 @@ The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensit
 
 AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors suggest may alleviate the excess drizzle bias in CAM. As with the ZM scheme used in this study, dilute CAPE must exceed a threshold for convection to occur, but \cite{XETAL2019JAMES} also require DCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and DCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that DCAPE is often negative in drizzling regions, and the \cite{XETAL2019JAMES} trigger would not allow for convection to occur. The authors suggest that this trigger be explored as a means to mitigate the drizzling bias in future versions of CAM.
 
-This study argues that the sensitivity of parameterized convection and stratiform precipitation rates to resolution are a response to the increase in magnitude of vertical velocities with resolution. This is essentially the hypothesis put forth by \cite{HR2017JCLIM} to explain resolution sensitivity, that increased vertical velocities with resolution interacts with other model components, steering the model towards a new mean state. Here, those interactions are documented in detail. Resolution sensitivity therefore arises from the relationship between vertical velocities and resolution, a well-known scale dependency of the equations of motion \citep{O1981JAS}. This scale dependency cannot be ignored in the pursuit of scale-aware physics.
+This study argues that the sensitivity of parameterized convection and stratiform precipitation rates to resolution are a response to the increase in magnitude of vertical velocities with resolution. This is essentially the hypothesis put forth by \cite{HR2017JCLIM} to explain resolution sensitivity, that increased vertical velocities with resolution interacts with other model components, steering the model towards a new mean state. Here, those interactions are documented explicitly. Resolution sensitivity therefore arises from the relationship between vertical velocities and resolution, a well-known scale dependency of the equations of motion \citep{O1981JAS}. This scale dependency cannot be ignored in the pursuit of scale-aware physics.
 
 \ack 
 Funding support for this work was in part provided by the U.S. Department of Energy Office of Science (DE-SC0019459) and the National Science Foundation (AGS1648629 and AGS1830729). Computing and data storage resources, including the Cheyenne supercomputer (doi:10.5065/D6RX99HX), were provided by the Computational and Information Systems Laboratory (CISL) at the National Center for Atmospheric Research (NCAR). Herrington would like to thank Dr. Sultan Hameed for his assistance with the statistical analysis used in this study.
