--- a/resolution.tex
+++ b/resolution.tex
@@ -291,19 +291,19 @@ In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposi
 
 Establishing a complete understanding of resolution sensitivity in atmospheric general circulation models (AGCMs) is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of physical parameterizations compatible with the highly flexible grid structures now being used to maximize efficiency on modern day supercomputers (i.e., scale-aware physics). This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since its inception (see Figure~\ref{fig:cam-history}). As with most versions of CAM, in CAM6 the atmosphere becomes drier and less cloudy with increasing resolution, and parameterized convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness with resolution is a result of increases in the magnitude of vertical velocities with resolution, which more efficiently advects dry air aloft, downward \citep{KW1991JGR,WETAL1995CD,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why convective precipitation decreases at the expense of stratiform precipitation with increasing resolution.
 
-The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The $n=-1$ exponent is derived from a scale analysis of the Poisson equation, indicating that pressure gradients scale like the inverse of the horizontal scale of buoyancy perturbations, $D^{-1}$, driving convergence into the air column and the vertical velocities also scale like $D^{-1}$. It has been previously shown that $D$ is set by stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, the effective resolution \citep{S2011LNCSE}, and so $D \propto \Delta x$ giving $n=-1$. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
+The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The $n=-1$ exponent is derived from a scale analysis of the Poisson equation, with pressure gradients scaling like the inverse of the horizontal scale of buoyancy perturbations, $D^{-1}$, driving convergence into the air column and vertical velocities that also scale like $D^{-1}$. It has been previously shown that $D$ is set by stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, the effective resolution \citep{S2011LNCSE}, and so $D \propto \Delta x$ giving $n=-1$. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
 
-The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} propose that since the $h=\frac{1}{3}$ is supported by observations, it is an emergent constraint for $n=-\frac{2}{3}$. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is only marginally resolved in the highest resolution simulation $\Delta x=27.8$ km ($ne120$), and CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of the kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is shallower than the slope near where the spectrum approaches the effective resolution, for all grid resolutions (Figure~~\ref{fig:2ke}). There is however, a progressive shoaling of the slope $-\beta$ with increasing resolution (Figure~~\ref{fig:2ke}b). This suggests a transition towards the $-\frac{5}{3}$ slope in the model, but seeing this process through would require running the model at higher resolutions than considered in this study.
+The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} propose that since the $h=\frac{1}{3}$ is supported by observations, $n=-\frac{2}{3}$ is an emergent constraint on models. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is only marginally resolved in the highest resolution simulation $\Delta x=27.8$ km ($ne120$), and CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of the kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is shallower than the slope near where the spectrum approaches the effective resolution, for all grid resolutions (Figure~~\ref{fig:2ke}). There is however, a progressive shoaling of the slope $-\beta$ with increasing resolution (Figure~~\ref{fig:2ke}b). This suggests a transition towards the $-\frac{5}{3}$ slope in the model, but seeing this process through would require running the model at higher resolutions than considered in this study.
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_kespectra.pdf}\\
 \end{center}
-\caption{(a) Kinetic energy spectrum and (b) compensated kinetic energy spectrum at the 200 hPa level in the simulations. The diagonal black line in (a) is a reference spectrum with a $-3$ slope. Compensated kinetic energy spectrum refers to the kinetic energy spectrum multiplied by $n^{-\frac{5}{3}}$, with spherical wavenumber $n$, so that horizontal lines indicate a spectrum with a $-\frac{5}{3}$ slope. In (b), thick ``caterpillars" are overlain on the portion of each spectrum pertaining to the $5-10 \Delta x$ effective resolution of the model.}
+\caption{(a) Kinetic energy spectrum and (b) compensated kinetic energy spectrum at the 200 hPa level in the simulations. The diagonal black line in (a) is a reference spectrum with a $-3$ slope. Compensated kinetic energy spectrum refers to the kinetic energy spectrum multiplied by $k^{-\frac{5}{3}}$, with spherical wavenumber $k$, so that horizontal lines indicate a spectrum with a $-\frac{5}{3}$ slope. In (b), solid circles are overlain on each spectrum pertaining to $10 \Delta x$, a conservative estimate for the effective resolution of the model.}
 \label{fig:2ke}
 \end{figure}
 
-An increase in resolved moisture fluxes through cloud base occurs with increasing resolution, and balanced by an increase in stratiform precipitation rates. Through decomposing the stratiform precipitation into the components of the moisture flux, it is shown that the increase in stratiform precipitation rates with resolution is primarily due to the increase in resolved mass fluxes arising from the increase in resolved vertical velocities with resolution. At higher resolutions, larger stratiform precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate, with smaller magnitude precipitation rates contributing less. The increasing occurrence of larger magnitude vertical velocities and stratiform precipitation rates at higher resolution is at odds with a similar analysis by \cite{TETAL2018CD} using a similar model. The authors suggests that their use of daily averaged fields obscured the covariance between vertical velocity and moisture (i.e., moisture flux) and complicated their calculation.
+An increase in resolved moisture fluxes through cloud base occurs with increasing resolution, and balanced by an increase in stratiform precipitation rates. Through decomposing the stratiform precipitation into the components of the moisture flux, it is shown that the increase in stratiform precipitation rates with resolution is primarily due to the increase in resolved mass fluxes arising from the increase in resolved vertical velocities with resolution. At higher resolutions, larger stratiform precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate, with smaller magnitude precipitation rates contributing less. The increasing occurrence of larger magnitude vertical velocities and stratiform precipitation rates at higher resolution is at odds with a similar analysis by \cite{TETAL2018CD} using a similar model. The authors suggests that their use of daily averaged fields obscured the covariance between vertical velocity and moisture (i.e., moisture flux), complicating the analysis.
 
 A strong negative correlation is discovered between the climatological, global mean activity of the \cite{ZM1995AO} deep convection scheme (ZM scheme) and global mean subsiding motion in the simulations. Since the ZM scheme is modulated by an entraining plume calculation, referred to as the dilute convective available potential energy (dilute CAPE), the authors sought to understand the influence of subsidence on dilute CAPE. In the deep tropics ($\pm 10^{\circ}$ latitude), subsiding regions have much smaller dilute CAPE values compared to ascending regions due to the influence of the drier subsiding environment on dilute CAPE. With increasing resolution and in the deep tropics, the occurrence of subsiding motion increases dramatically and at the expense of ascending motion, and the activity of the the ZM scheme decreases overall. This is consistent with the $\Delta x^{-1}$ scaling of the vertical velocities, e.g., a doubling of resolution can generate the same upward mass flux in just half the area. The increased efficiency of upward mass fluxes with resolution suggests that the occurrence of ascending motion can decrease with resolution while still maintaining statistical equilibrium with the large-scale forcing.
 
@@ -315,7 +315,7 @@ The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensit
 
 AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors suggest may alleviate the excess drizzle bias in CAM. As with the ZM scheme used in this study, dilute CAPE must exceed a threshold for convection to occur, but \cite{XETAL2019JAMES} also require DCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and DCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that DCAPE is often negative in drizzling regions, and the \cite{XETAL2019JAMES} trigger would not allow for convection to occur. The authors suggest that this trigger be explored as a means to mitigate the drizzling bias in future versions of CAM.
 
-This study argues that the sensitivity of parameterized convection and stratiform precipitation rates to resolution are a response to the increase in magnitude of vertical velocities with resolution. This is essentially the hypothesis put forth by \cite{HR2017JCLIM} to explain resolution sensitivity, that increased vertical velocities with resolution interacts with other model components, steering the model towards a new mean state. Here, those interactions are documented explicitly. Resolution sensitivity therefore arises from the relationship between vertical velocities and resolution, a well-known scale dependency of the equations of motion \citep{O1981JAS}. This scale dependency needs to be addressed in the pursuit of scale-aware physics.
+This study argues that the sensitivity of parameterized convection and stratiform precipitation rates to resolution are a response to the increase in magnitude of vertical velocities with resolution. This is essentially the hypothesis put forth by \cite{HR2017JCLIM} to explain resolution sensitivity, that increased vertical velocities with resolution interacts with other model components, steering the model towards a new mean state. Here, those interactions are documented explicitly. Resolution sensitivity therefore arises from the relationship between vertical velocities and resolution, a well-known scale dependency of the equations of motion \citep{O1981JAS}.
 
 \ack 
 Funding support for this work was in part provided by the U.S. Department of Energy Office of Science (DE-SC0019459) and the National Science Foundation (AGS1648629 and AGS1830729). Computing and data storage resources, including the Cheyenne supercomputer (doi:10.5065/D6RX99HX), were provided by the Computational and Information Systems Laboratory (CISL) at the National Center for Atmospheric Research (NCAR). Herrington would like to thank Dr. Sultan Hameed for his assistance with the statistical analysis used in this study.
