--- a/resolution.tex
+++ b/resolution.tex
@@ -289,11 +289,11 @@ In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposi
 
 \section{Discussion and conclusions}
 
-Establishing a complete understanding of resolution sensitivity in atmospheric general circulation models (AGCMs) is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of physical parameterizations compatible with the highly flexible grid structures now being used to maximize efficiency on modern day supercomputers (i.e., scale-aware physics). This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since its inception (see Figure~\ref{fig:cam-history}). As with most versions of CAM, in CAM6 the atmosphere becomes drier and less cloudy with increasing resolution, and parameterized convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness with resolution is a result of increases in the magnitude of vertical velocities with resolution, which more efficiently advects dry air aloft, downward \citep{KW1991JGR,WETAL1995CD,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why convective precipitation decreases at the expense of stratiform precipitation with increasing resolution.
+Establishing a complete understanding of resolution sensitivity in atmospheric general circulation models (AGCMs) is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of physical parameterizations compatible with the highly flexible grid structures now being used to maximize efficiency on modern day supercomputers (i.e., scale-aware physics). This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since its inception (see Figure~\ref{fig:cam-history}). As with just about every version of CAM, in CAM6 the atmosphere becomes drier and less cloudy with increasing resolution, and parameterized convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness with resolution is a result of increases in the magnitude of vertical velocities with resolution, which more efficiently advects dry air aloft, downward \citep{KW1991JGR,WETAL1995CD,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why convective precipitation decreases at the expense of stratiform precipitation with increasing resolution.
 
-The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The $n=-1$ exponent is derived from a scale analysis of the Poisson equation, with pressure gradients scaling like the inverse of the horizontal scale of buoyancy perturbations, $D^{-1}$, driving convergence into the air column and vertical velocities that also scale like $D^{-1}$. It has been previously shown that $D$ is set by stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, the effective resolution \citep{S2011LNCSE}, and so $D \propto \Delta x$ giving $n=-1$. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
+The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The $n=-1$ exponent is derived from a scale analysis of the Poisson equation, with pressure gradients scaling like the inverse of the horizontal scale of buoyancy perturbations, $D^{-1}$, driving convergence into the air column and bringing about vertical velocities that also scale like $D^{-1}$. It has been previously shown that $D$ is set by stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, the effective resolution \citep{S2011LNCSE}, and so $D \propto \Delta x$ giving $n=-1$. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
 
-The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} propose that since the $h=\frac{1}{3}$ is supported by observations, $n=-\frac{2}{3}$ is an emergent constraint on models. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is only marginally resolved in the highest resolution simulation $\Delta x=27.8$ km ($ne120$), and CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of the kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is shallower than the slope near where the spectrum approaches the effective resolution, for all grid resolutions (Figure~~\ref{fig:2ke}). There is however, a progressive shoaling of the slope $-\beta$ with increasing resolution (Figure~~\ref{fig:2ke}b). This suggests a transition towards the $-\frac{5}{3}$ slope in the model, but seeing this process through would require running the model at higher resolutions than considered in this study.
+The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} propose that since the $h=\frac{1}{3}$ is supported by observations and models at the mesoscale, $n=-\frac{2}{3}$ is an emergent constraint on models. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is only marginally resolved in the highest resolution simulation $\Delta x=27.8$ km ($ne120$), and CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of the kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is shallower than the slope near where the spectrum approaches the effective resolution, for all grid resolutions (Figure~~\ref{fig:2ke}). There is however, a progressive shoaling of the slope $-\beta$ with increasing resolution (Figure~~\ref{fig:2ke}b). This suggests a transition towards the $-\frac{5}{3}$ slope in the model, but seeing this process through would require running the model at higher resolutions than considered in this study.
 
 \begin{figure}
 \begin{center}
