--- a/resolution.tex
+++ b/resolution.tex
@@ -19,7 +19,7 @@
 \corraddr{\url{adam.herrington@stonybrook.edu}}
 
 \begin{abstract}
-This paper describes...
+
 \end{abstract}
 
 \keywords{Climate models, physical parameterizations, resolution sensitivity}
@@ -30,7 +30,7 @@ This paper describes...
 
 An increasing number of Atmospheric General Circulation Models (AGCMs) are being developed to maximize efficiency on massively parallel systems, permitting regionally-refined high-resolution, or even globally high-resolution weather ($\Delta x \leq 5$ km) and climate ($\Delta x \leq 50$ km) simulations \citep{SMTMN2008JCP,MPASatm,Z2014QJRMS,HETAL2016JCLIM,DCMIP16,LetAl2018JAMES}. These models are built using unstructured meshes that allows for substantial grid flexibility, but lack physical parameterizations ({\em{physics}}) which behave consistently as the truncation scale of the model changes with different grid resolutions, referred to as scale-aware physics. The most common approach towards developing scale-aware physics is through the lens of limited area, large-eddy simulations \citep[e.g.,][]{PC2008JAS,AW2013JAS,SZ2018JCLIM}. By subsequently filtering large-eddy solutions to lower-resolution grids, a relationship between first- and higher-order moments may be understood and ultimately parameterized as a function of grid resolution. While this approach is necessary for developing scale-aware physics, it is not sufficient. The equations of motions have inherent scale dependencies, and the properties of dynamical modes are a function of native grid resolution \citep{O1981JAS,WETAL1997MWR,PG2006JAS,JR2016QJRMS}. Scale-aware physics should also recognize these native grid dependencies.
 
-The sensitivity of the Community Atmosphere Model \citep[CAM;][]{CAM5}, and its predecessor, the Community Climate Model (CCM) to resolution ({\em{resolution}} refers to {\em{horizontal resolution}} hereafter) is well documented through convergence studies \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}. CAM/CCM is a fully supported, well-funded climate model, but despite thirty years of continual model development, there are robust sensitivities to resolution that have persisted in all versions of the model. This study argues that a unifying cause, the inherent scale sensitivities of the underlying dynamical equations, can explain the robust responses to resolution that occur in CAM/CCM.
+The sensitivity of the Community Atmosphere Model \citep[CAM;][]{CAM5}, and its predecessor, the Community Climate Model (CCM) to resolution ({\em{resolution}} refers to {\em{horizontal resolution}} hereafter) is well documented through convergence studies \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}. CAM/CCM is a fully supported, well-funded climate model, but despite thirty years of continual model development, there are robust sensitivities to resolution that have persisted in all versions of the model. This study argues that a unifying cause, the inherent scale sensitivities of the underlying dynamical equations, can explain these robust responses to resolution that occur in CAM/CCM.
 
 In CAM/CCM, the atmosphere progressively dries with increasing resolution, seen through a reduction in simulated total precipitable water \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}, which typically, but not always \citep[see][]{WETAL1995CD,ZetAl2014JCb}, coincides with a reduction in cloud cover. \cite{KW1991JGR} and \cite{WETAL1995CD} suggested that the drying of the atmosphere is due to greater magnitude resolved vertical velocities with increasing resolution, with greater subsiding motion increasing the export of dry air from the upper troposphere. This mechanism is consistent with an analysis of moisture budgets in CAM, version 4 \citep[CAM4;][]{CAM4} across multiple resolutions \citep{HR2017JCLIM}.
 
@@ -92,7 +92,7 @@ The simulations use the CAM6 physics package. The Cloud Layers Unified by Binorm
 
 \subsection{Experimental Design}
 
-The convergence experiment is performed in an aqua-planet configuration \citep{NH2000ASL,MWO2016JAMES}, an all ocean planet with fixed, zonally symmetric sea surface temperatures modeled after present day Earth \citep[$QOBS$ in][]{NH2000ASL}. The aqua-planets are in a perpetual equinox, and aerosols are largely absent from the simulations. Each simulation is ran for one simulated year. Six different horizontal grids are used in this study, which are provided in Table~\ref{tbl:table1}. In addition to the six simulations used in the convergence experiment, an ensemble of 24 simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are ran for one year in order to increase confidence in assessing the resolution sensitivity in this study. All analyses exclude the first month of the simulations, which is sufficient to avoid the spin-up period; the model comes into global energy balance after about ten days (not shown). All calculations are performed on their native grids unless otherwise stated.
+The convergence experiment is performed in an aqua-planet configuration \citep{NH2000ASL,MWO2016JAMES}, an all ocean planet with fixed, zonally symmetric sea surface temperatures modeled after present day Earth \citep[$QOBS$ in][]{NH2000ASL}. The aqua-planets are in a perpetual equinox, and aerosols are largely absent from the simulations. Each simulation is ran for one simulated year. Six different horizontal grids are used in this study, which are provided in Table~\ref{tbl:table1}. In addition to the six simulations used in the convergence experiment, an ensemble of 24 simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are ran for one year in order to increase confidence in assessing resolution sensitivity in this study. All analyses exclude the first month of the simulations, which is sufficient to avoid the spin-up period; the model comes into global energy balance after about ten days (not shown). All calculations are performed on their native grids unless otherwise stated.
 
 The horizontal hyper-viscosity operators $\nu$ vary with resolution after \cite{HETAL2019JAMES}, also provided in Table~\ref{tbl:table1}. The values of $\nu$ are a factor 2.5 greater for divergence damping and are not shown. $\Delta t_{phys}$ is chosen to scale with resolution, in proportion to the grid spacing,
 \begin{equation}
@@ -125,7 +125,7 @@ Table~\ref{tbl:table1} provides some globally averaged, climatological metrics f
 
 The probability density function (PDF) of negative, or upward vertical pressure velocities $\omega$ in the aqua-planets is provided in Figure~\ref{fig:2pdf}a. The magnitude of upward $\omega$ increases monotonically with resolution, with positive, or downward $\omega$ behaving similarly (not shown). This monotonic increase in the magnitude of $\omega$ is evident even after remapping all model output to a common grid ($ne20$; dotted curves in Figure~\ref{fig:2pdf}a).
 
-The PDF's may be scaled to the highest-resolution, $ne120$ grid through $ \alpha P (\omega / \alpha)$, where $P(x)$ is the PDF and $\alpha$ the scale factor from equation~\ref{eq:alpha} with $\Delta x_0$ set to the $ne120$ grid-spacing. Figure~\ref{fig:2pdf}b shows the scaled PDF's for a power law exponent $n=-1$ in $\Delta x$. The scaled PDF's all collapse onto the high-resolution reference, indicating that the power-law exponent $n=-1$ explains to first-order the variation in vertical velocity with resolution as shown by the aqua-planet simulations. 
+The PDF's may be scaled to the highest-resolution, $ne120$ grid through $ \alpha P (\omega / \alpha)$, where $P(x)$ is the PDF and $\alpha$ the scale factor from equation~\ref{eq:alpha} with $\Delta x_0$ set to the $ne120$ grid-spacing. Figure~\ref{fig:2pdf}b shows the scaled PDF's for a power law exponent $n=-1$ in $\Delta x$. The scaled PDF's all collapse onto the high-resolution reference, indicating that the power-law exponent $n=-1$ explains to first-order the variation in vertical velocity with resolution as shown by the aqua-planet simulations. In contrast, the $n=-\frac{2}{3}$ slope proposed in \cite{RETAL2016CD} greatly underestimates the increasing occurrence of large magnitude vertical velocities with resolution (Supplementary Figure 1).
 
 Changes to the vertical velocity field can be further understood through decomposing the mass weighted vertical mean $ \langle \omega \rangle$ into upward and downward components,
 \begin{equation}
@@ -293,13 +293,13 @@ Establishing a complete understanding of resolution sensitivity in atmospheric g
 
 The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The $n=-1$ exponent is derived from a scale analysis of the Poisson equation, with pressure gradients scaling like the inverse of the horizontal scale of buoyancy perturbations, $D^{-1}$, driving convergence into the air column and bringing about vertical velocities that also scale like $D^{-1}$. It has been previously shown that $D$ is set by stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, the effective resolution \citep{S2011LNCSE}, and so $D \propto \Delta x$ giving $n=-1$. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
 
-The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} propose that since the $h=\frac{1}{3}$ is supported by observations and models at the mesoscale, $n=-\frac{2}{3}$ is an emergent constraint on models. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is only marginally resolved in the highest resolution simulation $\Delta x=27.8$ km ($ne120$), and CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of the kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is shallower than the slope near where the spectrum approaches the effective resolution, for all grid resolutions (Figure~~\ref{fig:2ke}). There is however, a progressive shoaling of the slope $-\beta$ with increasing resolution (Figure~~\ref{fig:2ke}b). This suggests a transition towards the $-\frac{5}{3}$ slope in the model, but seeing this process through would require running the model at higher resolutions than considered in this study.
+The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} propose that since the $h=\frac{1}{3}$ is supported by observations and models at the mesoscale, $n=-\frac{2}{3}$ is an emergent constraint on models. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is only marginally resolved in the highest resolution simulation $\Delta x=27.8$ km ($ne120$), and CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of the kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is shallower than the slope near where the spectrum approaches the effective resolution, for all grid resolutions (Figure~~\ref{fig:2ke}). There is however, a progressive shoaling of the slope $-\beta$ with increasing resolution (Figure~~\ref{fig:2ke}b). This suggests a transition towards the $-\frac{5}{3}$ slope in the simulations, but seeing this process through would require running the model at higher resolutions than considered in this study.
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_kespectra.pdf}\\
 \end{center}
-\caption{(a) Kinetic energy spectrum and (b) compensated kinetic energy spectrum at the 200 hPa level in the simulations. The diagonal black line in (a) is a reference spectrum with a $-3$ slope. Compensated kinetic energy spectrum refers to the kinetic energy spectrum multiplied by $k^{-\frac{5}{3}}$, with spherical wavenumber $k$, so that horizontal lines indicate a spectrum with a $-\frac{5}{3}$ slope. In (b), solid circles are overlain on each spectrum pertaining to $10 \Delta x$, a conservative estimate for the effective resolution of the model.}
+\caption{(a) Kinetic energy spectrum and (b) compensated kinetic energy spectrum at the 200 hPa level in the simulations. The diagonal black line in (a) is a reference spectrum $k^{-3}$, with spherical wavenumber $k$. Compensated kinetic energy spectrum refers to the kinetic energy spectrum multiplied by $k^{-\frac{5}{3}}$, so that horizontal lines indicate a spectrum with a $-\frac{5}{3}$ slope. In (b), thick ``caterpillars" are overlain on each spectrum in the $5-10 \Delta x$ range, encompassing the effective resolution of the model.}
 \label{fig:2ke}
 \end{figure}
 
@@ -318,7 +318,7 @@ AGCMs are known to suffer from an excess of drizzle relative to observations \ci
 This study argues that the sensitivity of parameterized convection and stratiform precipitation rates to resolution are a response to the increase in magnitude of vertical velocities with resolution. This is essentially the hypothesis put forth by \cite{HR2017JCLIM} to explain resolution sensitivity, that increased vertical velocities with resolution interacts with other model components, steering the model towards a new mean state. Here, those interactions are documented explicitly. Resolution sensitivity therefore arises from the relationship between vertical velocities and resolution, a well-known scale dependency of the equations of motion \citep{O1981JAS}.
 
 \ack 
-Funding support for this work was in part provided by the U.S. Department of Energy Office of Science (DE-SC0019459) and the National Science Foundation (AGS1648629 and AGS1830729). Computing and data storage resources, including the Cheyenne supercomputer (doi:10.5065/D6RX99HX), were provided by the Computational and Information Systems Laboratory (CISL) at the National Center for Atmospheric Research (NCAR). Herrington would like to thank Dr. Sultan Hameed for his assistance with the statistical analysis used in this study.
+Funding support for this work was in part provided by the U.S. Department of Energy Office of Science (DE-SC0019459) and the National Science Foundation (AGS1648629 and AGS1830729). Computing and data storage resources, including the Cheyenne supercomputer (doi:10.5065/D6RX99HX), were provided by the Computational and Information Systems Laboratory (CISL) at the National Center for Atmospheric Research (NCAR). Herrington would like to thank Dr. Sultan Hameed for his assistance with the statistical analysis used in this study. Model output used in this study is publicly available from the GitHub repository \url{https://github.com/adamrher/2019-cam-resolution/tree/master/data}.
 
 \bibliographystyle{wileyqj}
 \bibliography{bib}
