--- a/resolution.tex
+++ b/resolution.tex
@@ -19,7 +19,7 @@
 \corraddr{\url{adam.herrington@stonybrook.edu}}
 
 \begin{abstract}
-
+Advances in high performance computing make it possible to run atmospheric general circulation models (AGCMs) over an increasingly wider range of grid resolutions, using either globally uniform or variable-resolution grid structures, but which are incompatible with the non- or weakly- converging solutions with increasing horizontal resolution that have long characterized AGCMs. In the the Community Atmosphere Model (CAM), there are robust sensitivities to resolution that have persisted since the model was first introduced over thirty years ago; the atmosphere progressively dries and becomes less cloudy with resolution, and parameterized deep convective precipitation decreases at the expense of stratiform precipitation with resolution. This study argues that a unifying cause, the sensitivity of resolved dynamical modes to native grid resolution, feedback onto other model components and explain these robust sensitivities to resolution. The increasing magnitude of resolved vertical velocities with resolution are shown to fit the analytical scaling derived from the equations of motion at hydrostatics scales. This trend in vertical velocities results in an increase in resolved moisture fluxes at cloud base, balanced through an increase in stratiform precipitation rates with resolution. Compensating, greater magnitude subsiding motion is shown to stabilize the mean state and reduce the activity of parameterized convection and convective precipitation rates with resolution. This increase in subsiding motion with resolution has previously shown to dry out the atmosphere, reducing cloud cover, and bringing full circle an explanation for resolution sensitivity rooted in the inherent scale-sensitivities of the equations of motion. The impact of changing vertical velocity field with native grid resolution cannot be ignored in any effort to recover convergent solutions in AGCMs, and in particular, the development of scale-aware physical parameterizations.
 \end{abstract}
 
 \keywords{Climate models, physical parameterizations, resolution sensitivity}
@@ -125,7 +125,7 @@ Table~\ref{tbl:table1} provides some globally averaged, climatological metrics f
 
 The probability density function (PDF) of negative, or upward vertical pressure velocities $\omega$ in the aqua-planets is provided in Figure~\ref{fig:2pdf}a. The magnitude of upward $\omega$ increases monotonically with resolution, with positive, or downward $\omega$ behaving similarly (not shown). This monotonic increase in the magnitude of $\omega$ is evident even after remapping all model output to a common grid ($ne20$; dotted curves in Figure~\ref{fig:2pdf}a).
 
-The PDF's may be scaled to the highest-resolution, $ne120$ grid through $ \alpha P (\omega / \alpha)$, where $P(x)$ is the PDF and $\alpha$ the scale factor from equation~\ref{eq:alpha} with $\Delta x_0$ set to the $ne120$ grid-spacing. Figure~\ref{fig:2pdf}b shows the scaled PDF's for a power law exponent $n=-1$ in $\Delta x$. The scaled PDF's all collapse onto the high-resolution reference, indicating that the power-law exponent $n=-1$ explains to first-order the variation in vertical velocity with resolution as shown by the aqua-planet simulations. In contrast, the $n=-\frac{2}{3}$ slope proposed in \cite{RETAL2016CD} greatly underestimates the increasing occurrence of large magnitude vertical velocities with resolution (Supplementary Figure 1).
+The PDF's may be scaled to the highest-resolution, $ne120$ grid through $ \alpha P (\omega / \alpha)$, where $P(x)$ is the PDF and $\alpha$ the scale factor from equation~\ref{eq:alpha} with $\Delta x_0$ set to the $ne120$ grid-spacing. Figure~\ref{fig:2pdf}b shows the scaled PDF's for a power law exponent $n=-1$ in $\Delta x$. The scaled PDF's all collapse onto the high-resolution reference, indicating that the power-law exponent $n=-1$ explains to first-order the variation in vertical velocity with resolution as shown by the aqua-planet simulations. In contrast, the $n=-\frac{2}{3}$ slope proposed in \cite{RETAL2016CD} greatly underestimates the increasing occurrence of large magnitude vertical velocities with resolution (SFigure 1).
 
 Changes to the vertical velocity field can be further understood through decomposing the mass weighted vertical mean $ \langle \omega \rangle$ into upward and downward components,
 \begin{equation}
