ready for submission

--- a/resolution.tex
+++ b/resolution.tex
@@ -19,7 +19,7 @@
 \corraddr{\url{adam.herrington@stonybrook.edu}}
 
 \begin{abstract}
-Advances in high performance computing make it possible to run atmospheric general circulation models (AGCMs) over an increasingly wider range of grid resolutions, using either globally uniform or variable-resolution grid structures, but which are incompatible with the non- or weakly- converging solutions with increasing horizontal resolution that have long characterized AGCMs. In the the Community Atmosphere Model (CAM), there are robust sensitivities to resolution that have persisted since the model was first introduced over thirty years ago; the atmosphere progressively dries and becomes less cloudy with resolution, and parameterized deep convective precipitation decreases at the expense of stratiform precipitation with resolution. This study argues that a unifying cause, the sensitivity of resolved dynamical modes to native grid resolution, feedback onto other model components and explain these robust sensitivities to resolution. The increasing magnitude of resolved vertical velocities with resolution are shown to fit the analytical scaling derived from the equations of motion at hydrostatics scales. This trend in vertical velocities results in an increase in resolved moisture fluxes at cloud base, balanced through an increase in stratiform precipitation rates with resolution. Compensating, greater magnitude subsiding motion is shown to stabilize the mean state and reduce the activity of parameterized convection and convective precipitation rates with resolution. This increase in subsiding motion with resolution has previously shown to dry out the atmosphere, reducing cloud cover, and bringing full circle an explanation for resolution sensitivity rooted in the inherent scale-sensitivities of the equations of motion. The impact of changing vertical velocity field with native grid resolution cannot be ignored in any effort to recover convergent solutions in AGCMs, and in particular, the development of scale-aware physical parameterizations.
+Advances in high performance computing make it possible to run atmospheric general circulation models (AGCMs) over an increasingly wider range of grid resolutions, using either globally uniform or variable-resolution grid structures. In principle, this is an exciting opportunity to resolve atmospheric process and scales in a global model with unprecedented detail, but in practice this grid flexibility is not obviously compatible with the non- or weakly- converging solutions with increasing horizontal resolution that have long characterized AGCMs. In the the Community Atmosphere Model (CAM), there are robust sensitivities to horizontal resolution that have persisted since the model was first introduced over thirty years ago; the atmosphere progressively dries and becomes less cloudy with resolution, and parameterized deep convective precipitation decreases at the expense of stratiform precipitation with resolution. This study documents a convergence experiment using CAM, version 6, to argue that a unifying cause, the sensitivity of resolved dynamical modes to native grid resolution, feedback onto other model components and explain these robust sensitivities to resolution. The increasing magnitude of resolved vertical velocities with resolution are shown to fit an analytic scaling derived for the equations of motion at hydrostatic scales. This trend in vertical velocities results in an increase in resolved moisture fluxes at cloud base, balanced through an increase in stratiform precipitation rates with resolution. Compensating, greater magnitude subsiding motion with resolution has previously been shown to dry out the atmosphere and reduce cloud cover, and here it also shown to stabilize the mean state and reduce the activity of parameterized convection and convective precipitation rates with resolution. The impact of changing vertical velocity field with native grid resolution cannot be ignored in any effort to recover convergent solutions in AGCMs, and in particular, the development of scale-aware physical parameterizations.
 \end{abstract}
 
 \keywords{Climate models, physical parameterizations, resolution sensitivity}
